<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="username">HS-Benutzername</string>
    <string name="password">Passwort</string>
    <string name="text_savePWcheckBox">Passwort speichern</string>
    <string name="login">Anmelden</string>
    <string name="cancel">Abbrechen</string>
    <string name="close">Schließen</string>
    <string name="error">Fehler</string>
    
    <string name="error_name_missing">Bitte HS-Benutzernamen angeben.</string>
    <string name="error_name_incorrect">HS-Benutzername ist falsch. Bsp.: mami1011</string>
    <string name="error_ok">OK</string>
    <string name="error_password_missing">Bitte Passwort angeben.</string>
    <string name="error_couldnt_connect">Verbindungsfehler</string>
    <string name="error_site_down">Hochschulwebsite ist im Wartungsmodus.</string>
    <string name="error_login_failed">Anmeldung fehlgeschlagen, bitte Logindaten überprüfen.</string>
    <string name="error_cookie_empty">Keinen Keks bekommen?</string>
    <string name="error_nosdcard">SD Karte nicht verfügbar.</string>
    
    <string name="dashboard_label">Menü</string>
    
    <string name="dirchooser_label">Downloadverzeichnis wählen</string>
    
    <string name="progress_connect">Verbinden&#8230;</string>
    <string name="progress_parse">Parsen&#8230;</string>
    <string name="progress_cookie">Keks nehmen&#8230;</string>
    
    <string name="grades_view">Notenspiegel</string>
    <string name="grades_view_attempt">Versuch: </string>
    <string name="grades_view_semester">Semester: </string>
    
    <string name="menu_preferences">Einstellungen</string>
    <string name="menu_about">Info</string>
    <string name="menu_refresh">Aktualisieren</string>
    <string name="menu_view">Ansicht</string>
    
    <string name="submenu_examViewAll">Alle Prüfungen</string>
    <string name="submenu_examViewOnlyLast">Aktuelle Prüfungen</string>
    <string name="submenu_examViewOnlyLastFailed">Aktuelle nicht bestandene Prüfungen</string>
    <string name="submenu_examViewAllFailed">Alle nicht bestandenen Prüfungen</string>
    <string name="submenu_examViewOnlyLastPassed">Aktuelle bestandene Prüfungen</string>
    <string name="submenu_examViewAllPassed">Alle bestandenen Prüfungen</string>
    
    <string name="about_subtitle">Notenapp</string>
    <string name="about_maintext">Mit diesem App wird der Notenspiegel über den \"Online Service 2\" abgerufen.\n\n
        Copyright 2011,2012 Oliver Eichner \n
        Lizenz: GPLv3\n
        Homepage:\nhttps://github.com/n0iz/hsDroid\n\n
		EMail: eiol0011@hs-karlsruhe.com oder n0izeland@gmail.com\n\n
		Das rote Logo im Icon ist Eigentum der Hochschule Karlsruhe.</string>
    <string name="label_set_preferences">Einstellungen</string>


    <string-array name="orderEntryArray">
        <item>Aufsteigend</item>
        <item>Absteigend</item>
    </string-array>
    
    <string-array name="ifFileExistArray">
        <item>Überschreiben</item>
        <item>Umbenennen</item>
    </string-array>

    <string name="fileExists">Datei existiert bereits</string>
    <string name="fileNotFound">Datei nicht gefunden</string>
    <string name="downloadFileQuestion">Soll die Datei heruntergeladen werden?</string>
    <string name="error_invalidServerResponse">Ungültige Antwort vom Server</string>
    <string name="error_DownloadFailed">Download fehlgeschlagen</string>
    <string name="success_downloadComplete">Download erfolgreich.</string>
    <string name="error_NoPdfApp">Keine Anwendung vorhanden um PDF Dateien zu öffnen</string>
    <string name="text_file">Datei</string>
    <string name="text_NotFound">nicht gefunden</string>
    <string name="text_selectSendDestination">Versenden über</string>
    <string name="text_chooseFile">Datei wählen</string>
    <string name="text_deleted">gelöscht</string>
    <string name="title_Certifications">Bescheinigungen</string>
    <string name="title_certContextMenu_selectAction">Aktion wählen</string>
    <string name="text_initialize">Initialisieren..</string>
    <string name="error_noGradeDistributionAvailableForX">Keine Notenverteilung für %s verfügbar</string>
    <string name="info_updateGradesList">Aktualisiere Notenspiegel&#8230;</string>
    <string name="text_asAttachment">Anhang: </string>
    <string name="error_downloadCanceled">Download abgebrochen</string>

    
    <string name="text_general">Allgemein</string>
    <string name="text_savePW">Passwort wird unverschlüsselt gespeichert!</string>
    
    <string name="text_autoLogin">AutoLogin</string>
	<string name="text_autoLoginDesc">Automatische Anmeldung beim Start.</string>
	
	<string name="text_degree">Abschluß</string>
	<string name="text_degreeDesc">Angestrebter Abschluß.</string>
	
	
	<string name="text_autoUpdate">Auto Update</string>
	<string name="text_autoUpdateDesc">Notenspiegel automatisch aktualisieren, wenn dieser aufgerufen wird.</string>
			
	<string name="text_sortOrder">Sortierreihenfolge ändern</string>
	<string name="text_sortOrderDesc">Aufsteigende oder absteigende Anordnung der Noten.</string>


	<string name="text_changeView">Ansicht ändern</string>
	<string name="text_changeViewDesc">Legt fest in welcher Ansicht der Notenspiegel standardmäßig angezeigt wird.</string>
	
	<string name="text_highlight">Hervorheben</string>
	<string name="text_highlightDesc">Prüfungsleistung des aktuellen Semesters hervorheben.</string>
	
	<string name="text_color">Farbe</string>
	<string name="text_colorDesc">Farbe der Hervorhebung auswählen.</string>

	<string name="text_connection">Verbindung</string>
	
	<string name="text_downloadDir">Download Verzeichnis</string>
	
	<string name="text_data">Daten</string>
	<string name="text_delDB">DB löschen</string>
	<string name="text_delDBDesc">Alle Daten aus der Datenbank löschen.</string>
	
	<string name="text_setConnectionTimeout">HTTP Verbindungs Timeout</string>
	<string name="text_setConnectionTimeoutDesc">Max. dauer des Verbindungsaufbaus in ms.</string>
	
	<string name="text_delCookie">Cookie löschen</string>
	<string name="text_delCookieDesc">Entfernt Cookie aus dem Speicher.</string>
	
	<string name="text_resetSettings">Einstellungen zurücksetzen</string>
	<string name="text_resetSettingsDesc">Löscht alle Einstellungen.</string>
	
	<string name="text_path">Pfad:</string>
	<string name="text_delDBCompleted">Datenbank gelöscht.</string>
    <string name="text_resetSettingsComplete">Einstellunge zurückgesetzt.</string>
	<string name="text_separator">Trennlinie</string>
	<string name="text_separatorDesc">Trennlinien für einzelne Semester anzeigen.</string>
	
	<string name="loadGradeDistrib">Lade Notenverteilung für %s.</string>
    
</resources>